Fix Braven logo alignment and size in the header.

--- a/app/assets/stylesheets/layouts/accounts.scss
+++ b/app/assets/stylesheets/layouts/accounts.scss
@@ -874,11 +874,6 @@ form {
 	margin-top: 0px;
 }
 
-#blogo {
-	width: 185px;
-	height: 40px;
-}
-
 #footer_menu {
 	max-width: 980px;
 	margin: 0 auto;
